--- a/API/Views/Register/ProceedLogin.cshtml
+++ b/API/Views/Register/ProceedLogin.cshtml
@@ -3,3 +3,8 @@
 *@
 @{
 }
+<h1>Your Employer is registered!</h1>
+<div>
+
+    <a asp-controller="Login" asp-action="Login">Login as employer</a>
+</div>
