--- a/API/Views/Shared/_Layout.cshtml
+++ b/API/Views/Shared/_Layout.cshtml
@@ -49,7 +49,7 @@
                                 </li>
 
                                 <li class="nav-item">
-                                    <a class="nav-link text-white" asp-area="" asp-controller="Login" asp-action="Logout">Register</a>
+                                    <a class="nav-link text-white" asp-area="" asp-controller="Register" asp-action="Register">Register</a>
                                 </li>
                             </ul>
                         }      
