--- a/API/Views/Task/Edit.cshtml
+++ b/API/Views/Task/Edit.cshtml
@@ -1,38 +1,35 @@
 ﻿@model BusinessLayer.ViewModels.TaskViewModel
 
 @{
-    ViewData["Title"] = "Assign a new Task";
-    
+    ViewData["Title"] = "Edit";
 }
 
-<h1>Create and assing a new Task</h1>
+<h1>Edit</h1>
 
+<h4>TaskWork</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="CreateTask" asp-route-id="@Model.Assignee.Id">
+        <form asp-action="EditTask">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Title" class="control-label"></label>
-                <input asp-for="Title" type="text" name="title" placeholder="Title" class="form-control" />
+                <input asp-for="Title" class="form-control" />
                 <span asp-validation-for="Title" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Description" class="control-label"></label>
-                <input asp-for="Description" type="text" name="description" placeholder="Describe task" class="form-control" />
+                <input asp-for="Description" class="form-control" />
                 <span asp-validation-for="Description" class="text-danger"></span>
-            </div>
-            
+            </div>           
             <div class="form-group">
-                <label asp-for="DueDate" class="control-label">Due Date</label>
+                <label asp-for="DueDate" class="control-label"></label>
                 <input asp-for="DueDate" name="due" class="form-control" />
                 <span asp-validation-for="DueDate" class="text-danger"></span>
-            </div>
-            
-
-            
-            <div class="form-group mt-2">
-                <input type="submit" value="Create" class="btn btn-primary" />
+            </div>           
+            <input type="hidden" asp-for="Id" />
+            <div class="form-group">
+                <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
     </div>
