--- a/API/Views/Employee/ListBestEmployees.cshtml
+++ b/API/Views/Employee/ListBestEmployees.cshtml
@@ -38,32 +38,64 @@
     </thead>
     <tbody>
 @foreach (var item in Model) {
-        <tr>
-            <td>
-                    
+            @if (User.Claims.FirstOrDefault(x => x.Type == "Id").Value.ToString() == item.EmployerId.ToString())
+            {
+                <tr class="table-primary">
+                    <td>
+
+                        @Html.DisplayFor(modelItem => item.EmployerInfo)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.CompletedTaskCouner)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Email)
+                    </td>
+
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Name)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.PhoneNumber)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.DateOfBirth)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Salary)
+                    </td>
+
+                </tr>
+            }
+            else
+            {
+                <tr >
+                    <td>
+
                     @Html.DisplayFor(modelItem => item.EmployerInfo)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CompletedTaskCouner)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Email)
-            </td>
-            
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.PhoneNumber)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.DateOfBirth)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Salary)
-            </td>
-            
-        </tr>
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.CompletedTaskCouner)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Email)
+                </td>
+
+                <td>
+                    @Html.DisplayFor(modelItem => item.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.PhoneNumber)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.DateOfBirth)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Salary)
+                </td>
+
+            </tr>
+            }
 }
     </tbody>
 </table>
