--- a/API/Views/Task/Edit.cshtml
+++ b/API/Views/Task/Edit.cshtml
@@ -31,6 +31,11 @@
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
+            <div class="form-group form-check">
+                <label class="form-check-label">
+                    <input class="form-check-input" name="done" asp-for="IsDone" /> @Html.DisplayNameFor(model => model.IsDone)
+                </label>
+            </div>
         </form>
     </div>
 </div>
