--- a/API/Views/Task/SeeTasks.cshtml
+++ b/API/Views/Task/SeeTasks.cshtml
@@ -6,7 +6,7 @@
     
 }
 
-<h1>All completed and uncompleted tasks </h1>
+<h1>All completed and uncompleted tasks for current employee</h1>
 
 
 <table class="table">
@@ -25,7 +25,7 @@
             <th>
                 Status
             </th>
-            <th></th>
+            <th>Action</th>
         </tr>
     </thead>
     <tbody>
@@ -45,13 +45,13 @@
                 <td>
                     @Html.DisplayFor(modelItem => item.IsDone)
                 </td>
+                <td>
                 @if (!item.IsDone)
-                {
-                    <td>
-                        <a asp-controller="Task" asp-action="Edit" asp-route-id="@item.Id">Edit</a> |                   
-                    <a asp-action="MarkAsDone" asp-route-id="@item.Id">Mark as done</a>
-                </td>
+                {                                    
+                    <a asp-action="MarkAsDone" asp-route-id="@item.Id">Mark as done</a>               
                 }
+                    <a asp-controller="Task" asp-action="Edit" asp-route-id="@item.Id">Edit</a>
+                </td>
              </tr>
         
 }
